[package]
name = "discord-statistics"
version = "0.1.0"
authors = ["Ethan Vazquez <edv121@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1"
colored = "2"
num_cpus = "1.13.0"
plotters = "*"
reqwest = "*"
