[package]
name = "discord-statistics"
version = "0.1.0"
authors = ["Ethan Vazquez <edv121@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1"
colored = "2"
num_cpus = "1.13.0"
reqwest = "*"
plotly = { version = "0.6.0" }
serde = "*"
regex = "*"
sanitize-filename = "0.3.0"
